--- a/index.html
+++ b/index.html
@@ -7,26 +7,31 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
 
-<body>
+<body style="background-color: black;">
 	<div id="app">
 		<v-app>
-			<v-parallax src="content/light.jpg" height="1200">
+			<v-parallax src="content/light.jpg" :height=wh>
 				<v-layout column align-center justify-center>
 					<h1></h1>
-					<h1 class="white--text">Hugo Bock</h1>
+					<h1 class="white--text">Hugo Bock {{wh}}</h1>
 				</v-layout>
 			</v-parallax>
-			<div style="background-color:blue; height:1400px;">
-					Salut
-				</div>
+			<div style="background-color:blue; height:100vh;">
+				Salut
+			</div>
 		</v-app>
 	</div>
-	
+
 
 	<script src="https://unpkg.com/vue/dist/vue.js"></script>
 	<script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
 	<script>
-		new Vue({ el: '#app' })
+		new Vue({
+			el: '#app',
+			data: {
+				wh: innerHeight
+			}
+		})
 
 	</script>
 
