Added a webgl version of my SuperVolume repo - Need to think about a way of handling zoom without removing the scroll ability

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
 	<link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+	<meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Unity WebGL Player | SuperShapes</title>
+    <script src="webgl/SuperVolume/Build/UnityLoader.js"></script>
+    <script>
+      var gameInstance = UnityLoader.instantiate("gameContainer", "webgl/SuperVolume/Build/WebGl.json");
+    </script>
 </head>
 
 <body style="background-color: black;">
@@ -13,12 +20,13 @@
 			<v-parallax src="content/light.jpg" :height=wh>
 				<v-layout column align-center justify-center>
 					<h1></h1>
-					<h1 class="white--text">Hugo Bock {{wh}}</h1>
+					<h1 class="white--text">Hugo Bock</h1>
 				</v-layout>
 			</v-parallax>
-			<div style="background-color:blue; height:100vh;">
+			<!-- <div style="background-color:blue; height:100vh;">
 				Salut
-			</div>
+			</div> -->
+			<div id="gameContainer" style="width: 100vw; height: 100vh; margin: auto"></div>
 		</v-app>
 	</div>
 
