--- a/index.html
+++ b/index.html
@@ -1,19 +1,48 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
-
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-	<meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <head>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui"
+    />
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Unity WebGL Player | SuperShapes</title>
     <script src="webgl/SuperVolume/Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "webgl/SuperVolume/Build/WebGl.json");
+      var gameInstance = UnityLoader.instantiate(
+        "gameContainer",
+        "webgl/SuperVolume/Build/WebGl.json"
+      );
     </script>
-</head>
+  </head>
 
-<body style="background-color: black;">
-	<div id="gameContainer" style="width: 100vw; height: 100vh; margin: auto"></div>
-</body>
+  <body style="background-color: black;">
+    <div
+      id="gameContainer"
+      style="width: 100vw; height: 100vh; margin: auto;"
+    ></div>
+  </body>
+</html> -->
 
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Unity WebGL Player | Pathfinding_AStar</title>
+    <script src="Build/UnityLoader.js"></script>
+    <script>
+      var gameInstance = UnityLoader.instantiate(
+        "gameContainer",
+        "Build/astar-webgl.json"
+      );
+    </script>
+  </head>
+  <body style="background-color: black;">
+    <div
+      id="gameContainer"
+      style="width: 960px; height: 600px; margin: auto;"
+    ></div>
+  </body>
 </html>
